update Spring Framework and migrate to JDK11